--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <h1>daily css</h1>
     </header>
-    <main>
+    <main class="main-body">
 
         <!-- Bouncing Loader  -->
         <section class="card">
@@ -56,6 +56,18 @@
                     <span>Hover Over this inner Box</span>
                 </a>
                 <!--  Button Color Hover code , Ends here   -->
+            </main>
+        </section>
+
+        <!--  Button 3D Effect   -->
+        <section class="card">
+            <h1> Button 3D Effect </h1>
+            <main class="card-body">
+                <!--  Button 3D Effect code  , Starts here  -->
+                <a class="btn-2" title="Hover Over this inner Box">
+                    Hover Over this inner Box
+                </a>
+                <!--  Button 3D Effect code , Ends here   -->
             </main>
         </section>
 
