--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="index.css">
-    <title>My Daily Code</title>
+    <title>Daily Code</title>
 </head>
 
 <body>
+
     <header class="header">
         <h1>daily css</h1>
     </header>
+
     <main class="main-body">
 
         <!-- Bouncing Loader  -->
