--- a/index.html
+++ b/index.html
@@ -73,6 +73,19 @@
             </main>
         </section>
 
+        <!-- Progress Bar Effect   -->
+        <section class="card">
+            <h1>Progress Bar Effect </h1>
+            <main class="card-body">
+                <!-- Progress Bar Effect code  , Starts here  -->
+                <div class="progress-bar-wrapper">
+                    <div class="progress-bar-1">
+                    </div>
+                </div>
+                <!-- Progress Bar Effect code , Ends here   -->
+            </main>
+        </section>
+
     </main>
 </body>
 
