--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <header class="header">
-        <h1>daily css</h1>
+        <h1>daily code</h1>
     </header>
 
     <main class="main-body">
