Adding Toggle Switch

--- a/index.html
+++ b/index.html
@@ -73,16 +73,27 @@
             </main>
         </section>
 
-        <!-- Progress Bar Effect   -->
+        <!-- Progress Bar -->
         <section class="card">
-            <h1>Progress Bar Effect </h1>
+            <h1>Progress Bar </h1>
             <main class="card-body">
-                <!-- Progress Bar Effect code  , Starts here  -->
+                <!-- Progress Bar code  , Starts here  -->
                 <div class="progress-bar-wrapper">
                     <div class="progress-bar-1">
                     </div>
                 </div>
-                <!-- Progress Bar Effect code , Ends here   -->
+                <!-- Progress Bar code , Ends here   -->
+            </main>
+        </section>
+
+        <!-- Toggle Switch -->
+        <section class="card">
+            <h1>Toggle Switch </h1>
+            <main class="card-body">
+                <!-- Toggle Switch code  , Starts here  -->
+                <input type="checkbox" id="switchCheck-1" class="offscreen-checkbox-1" />
+                <label for="switchCheck-1" class="switch-check-1"></label>
+                <!-- Toggle Switch code , Ends here   -->
             </main>
         </section>
 
