Adding sound beat loader

--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
             </main>
         </section>
 
+        <!-- Sound Beat Loader -->
+        <section class="card">
+            <h1>Sound Beat Loader </h1>
+            <main class="card-body">
+                <!-- Sound Beat Loader code  , Starts here  -->
+                <div class="sound"></div>
+                <div class="sound"></div>
+                <div class="sound"></div>
+                <div class="sound"></div>
+                <div class="sound"></div>
+                <div class="sound"></div>
+                <div class="sound"></div>
+                <div class="sound"></div>
+                <!-- Sound Beat Loader code , Ends here   -->
+            </main>
+        </section>
+
         <!-- Donut Spinner -->
         <section class="card">
             <h1>Donut Spinner</h1>
@@ -96,6 +113,8 @@
                 <!-- Toggle Switch code , Ends here   -->
             </main>
         </section>
+
+
 
     </main>
 </body>
