Reverting back the title & updating the header

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="index.css">
-    <title>Daily pure css</title>
+    <title>Daily Code</title>
 </head>
 
 <body>
 
     <header class="header">
-        <h1>daily code</h1>
+        <h1>daily pure css</h1>
     </header>
 
     <main class="main-body">
