Adding button text hover

--- a/index.html
+++ b/index.html
@@ -90,14 +90,23 @@
             </main>
         </section>
 
+        <!--  Button Text Hover   -->
+        <section class="card">
+            <h1> Button Text Hover </h1>
+            <main class="card-body">
+                <!--  Button Text Hover code  , Starts here  -->
+                <a class="btn-3"></a>
+                <!--  Button Text Hover code , Ends here   -->
+            </main>
+        </section>
+
         <!-- Progress Bar -->
         <section class="card">
             <h1>Progress Bar </h1>
             <main class="card-body">
                 <!-- Progress Bar code  , Starts here  -->
                 <div class="progress-bar-wrapper">
-                    <div class="progress-bar-1">
-                    </div>
+                    <div class="progress-bar-1"></div>
                 </div>
                 <!-- Progress Bar code , Ends here   -->
             </main>
