adding search hover effect

--- a/index.html
+++ b/index.html
@@ -123,6 +123,19 @@
             </main>
         </section>
 
+        <!-- Search box hover -->
+        <section class="card">
+            <h1>Search Box Hover </h1>
+            <main class="card-body">
+                <!-- Search box hover code  , Starts here  -->
+                <div class="search-box">
+                    <input type="text" class="search-txt" placeholder="Type here" />
+                    <a class="search-btn"></a>
+                </div>
+                <!-- Search box hover code , Ends here   -->
+            </main>
+        </section>
+
 
 
     </main>
